<resources>
    <string name="app_name">MyProyectCars</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_register">Registro de Usuario</string>
    <string name="subtitle_register">Por favor completa tus datos</string>
    <string name="prompt_first_name">Nombre</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="action_register">Registrarse</string>
    <string name="already_have_account">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="title_activity_cpanel_card">CpanelCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="error_register">Error en el registro</string>
    <string name="error_firstName">Complete el campo nombre</string>
    <string name="error_lastName">Complete el campo apellido</string>
    <string name="error_emailName">Complete el campo email</string>
    <string name="error_passwordName">Complete el campo contrasena</string>
</resources>